--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,11 @@ botocore==1.15.16
 cachetools==4.0.0
 certifi==2019.11.28
 chardet==3.0.4
+confusable-homoglyphs==3.2.0
+defusedxml==0.6.0
 Django==3.0.4
+django-allauth==0.41.0
+django-recaptcha==2.0.6
 django-s3-storage==0.13.0
 docutils==0.15.2
 google-auth==1.11.2
@@ -19,6 +23,7 @@ pyasn1==0.4.8
 pyasn1-modules==0.2.8
 python-dateutil==2.8.1
 python-memcached==1.59
+python3-openid==3.1.0
 pytz==2019.3
 PyYAML==5.3
 requests==2.23.0
