modify build workflow to trigger for all file changes under judge/ and pnoj/

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,11 +4,12 @@ on:
     branches:
       - master
     paths:
-      - 'judge/*'
-      - 'pnoj/*'
+      - 'judge/**'
+      - 'pnoj/**'
       - 'requirements.txt'
       - 'Dockerfile'
       - '.dockerignore'
+      - '.github/workflows/build.yml'
 jobs:
   build:
     name: build
