--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,27 @@
-asgiref==3.2.3
-boto3==1.12.16
-botocore==1.15.16
-cachetools==4.0.0
-certifi==2019.11.28
+asgiref==3.2.10
+boto3==1.14.16
+botocore==1.17.16
+certifi==2020.6.20
 chardet==3.0.4
-confusable-homoglyphs==3.2.0
 defusedxml==0.6.0
-Django==3.0.7
-django-allauth==0.41.0
+Django==3.0.8
+django-allauth==0.42.0
 django-recaptcha==2.0.6
-django-s3-storage==0.13.0
+django-s3-storage==0.13.2
 docutils==0.15.2
-google-auth==1.11.2
-gunicorn==20.0.4
-idna==2.9
-jmespath==0.9.5
-kubernetes==10.0.1
-Markdown==3.2.1
+dyndict==20.7.1
+idna==2.10
+jmespath==0.10.0
+Markdown==3.2.2
 oauthlib==3.1.0
-psycopg2==2.8.4
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
+psycopg2==2.8.5
 python-dateutil==2.8.1
-python-memcached==1.59
-python3-openid==3.1.0
-pytz==2019.3
-PyYAML==5.3
-requests==2.23.0
+python3-openid==3.2.0
+pytz==2020.1
+PyYAML==5.3.1
+requests==2.24.0
 requests-oauthlib==1.3.0
-rsa==4.0
 s3transfer==0.3.3
-six==1.14.0
+six==1.15.0
 sqlparse==0.3.1
-urllib3==1.25.8
-websocket-client==0.57.0
+urllib3==1.25.9
