--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ django-recaptcha==2.0.6
 django-s3-storage==0.13.2
 docutils==0.15.2
 dyndict==20.7.2
+gunicorn==20.0.4
 idna==2.10
 jmespath==0.10.0
 Markdown==3.2.2
