--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ Markdown==3.2.2
 oauthlib==3.1.0
 psycopg2==2.8.5
 python-dateutil==2.8.1
+python-memcached==1.59
 python3-openid==3.2.0
 pytz==2020.1
 PyYAML==5.3.1
