--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ chardet==3.0.4
 defusedxml==0.6.0
 Django==3.0.8
 django-allauth==0.42.0
+django-crispy-forms==1.9.2
 django-recaptcha==2.0.6
 django-s3-storage==0.13.2
 docutils==0.15.2
