--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Django==3.0.8
 django-allauth==0.42.0
 django-crispy-forms==1.9.2
 django-recaptcha==2.0.6
+django-redis==4.12.1
 django-s3-storage==0.13.2
 docutils==0.15.2
 dyndict==20.7.3
@@ -22,6 +23,7 @@ python-memcached==1.59
 python3-openid==3.2.0
 pytz==2020.1
 PyYAML==5.3.1
+redis==3.5.3
 requests==2.24.0
 requests-oauthlib==1.3.0
 s3transfer==0.3.3
